[project]
name = "bully-python"
version = "3.12.3"
description = "Add your description here"
authors = [
    { name = "Richard Hajek", email = "richard.m.hajek@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "bully_python:entrypoint

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bully_python"]
